// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="page-header"
>
  <div
    className="display-flex-space-between spacer-top"
  >
    <SearchFilterContainer
      onQueryChange={[MockFunction]}
      query={
        Object {
          "search": "test",
        }
      }
    />
    <div
      className="display-flex-center"
    >
      <Connect(withCurrentUser(ProjectCreationMenu))
        className="little-spacer-right"
      />
      <Connect(withCurrentUser(withRouter(withAppStateContext(ApplicationCreation))))
        className="little-spacer-right"
      />
      <Connect(HomePageSelect)
        className="spacer-left little-spacer-right"
        currentPage={
          Object {
            "type": "PROJECTS",
          }
        }
      />
    </div>
  </div>
  <div
    className="big-spacer-top display-flex-space-between"
  >
    <div
      className="display-flex-center"
    >
      <span
        className="projects-total-label"
      >
        <strong
          id="projects-total"
        >
          12
        </strong>
         
        projects._projects
      </span>
    </div>
    <div
      className="display-flex-center"
    >
      <PerspectiveSelect
        className="projects-topbar-item js-projects-perspective-select"
        onChange={[MockFunction]}
        view="overall"
      />
      <div
        className="projects-topbar-item"
      >
        <ProjectsSortingSelect
          className="js-projects-sorting-select"
          defaultOption="analysis_date"
          onChange={[MockFunction]}
          selectedSort="size"
          view="overall"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly while loading 1`] = `
<div
  className="page-header"
>
  <div
    className="display-flex-space-between spacer-top"
  >
    <SearchFilterContainer
      onQueryChange={[MockFunction]}
      query={
        Object {
          "search": "test",
        }
      }
    />
    <div
      className="display-flex-center"
    >
      <Connect(withCurrentUser(ProjectCreationMenu))
        className="little-spacer-right"
      />
      <Connect(withCurrentUser(withRouter(withAppStateContext(ApplicationCreation))))
        className="little-spacer-right"
      />
      <Connect(HomePageSelect)
        className="spacer-left little-spacer-right"
        currentPage={
          Object {
            "type": "PROJECTS",
          }
        }
      />
    </div>
  </div>
  <div
    className="big-spacer-top display-flex-space-between"
  >
    <div
      className="display-flex-center is-loading"
    >
      <span
        className="projects-total-label"
      >
        <strong
          id="projects-total"
        >
          2
        </strong>
         
        projects._projects
      </span>
    </div>
    <div
      className="display-flex-center"
    >
      <PerspectiveSelect
        className="projects-topbar-item js-projects-perspective-select"
        onChange={[MockFunction]}
        view="overall"
      />
      <div
        className="projects-topbar-item"
      >
        <ProjectsSortingSelect
          className="js-projects-sorting-select"
          defaultOption="analysis_date"
          onChange={[MockFunction]}
          selectedSort="size"
          view="overall"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render switch the default sorting option for anonymous users 1`] = `
<ProjectsSortingSelect
  className="js-projects-sorting-select"
  defaultOption="name"
  onChange={[MockFunction]}
  selectedSort="size"
  view="overall"
/>
`;

exports[`should render switch the default sorting option for anonymous users 2`] = `
<ProjectsSortingSelect
  className="js-projects-sorting-select"
  defaultOption="analysis_date"
  onChange={[MockFunction]}
  selectedSort="size"
  view="leak"
/>
`;
